# online-bibliotheek-catalogus

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  railway.json  release-please-config.json  render.yaml
.github/: pull_request_template.md
.github/workflows/: deploy.yml  release-please.yml
infrastructure/: README.md  main.tf  outputs.tf  railway-setup.sh  terraform.tfvars.example  variables.tf
scripts/: fly-cron.sh  openprovider_dns.py  release.sh
src/obc/: __init__.py  cli.py  client.py  config.py  db.py  detail.py  htmlutil.py  listing.py  log.py  normalize.py  scrape.py  similar.py  textnorm.py  util.py
src/obc/lists/: __init__.py  bestseller60.py  nyt.py  wikiprize.py
src/obc/web/: app.py  bio.py  queries.py  scheduler.py
src/obc/web/templates/: _macros.html  author.html  base.html  book.html  list_detail.html  lists.html  over.html  search.html  series.html  stats.html
tests/: conftest.py  sampledata.py  test_client.py  test_db.py  test_detail.py  test_listing.py  test_lists.py  test_normalize.py  test_queries.py  test_scheduler.py  test_scrape.py  test_similar.py  test_textnorm.py  test_web.py
tests/fixtures/: audiobook_431630879.html  detail_jeugd_422516414.html  ebook_416728413.html  ebook_460719149.html  listing_audiobook.html  listing_ebook.html
