[project]
name = "online-bibliotheek-catalogus"
version = "0.3.26"
description = "Own searchable catalog of the Dutch online bibliotheek (onlinebibliotheek.nl)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tenacity>=8.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "loguru>=0.7.3",
]

[project.scripts]
obc = "obc.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
obc = ["web/templates/*.html", "web/static/*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, B bugbear, UP pyupgrade,
# A flake8-builtins, C4 comprehensions, SIM simplify.
select = ["E", "W", "F", "I", "B", "UP", "A", "C4", "SIM"]
ignore = [
    "E501",   # line length is handled by the formatter, not enforced hard
    "SIM105", # contextlib.suppress over try/except/pass — explicit reads fine here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]              # fixtures imported after warning filters
"src/obc/web/app.py" = ["B008"]   # FastAPI Query(...) in defaults is the idiom
