[project]
name = "online-bibliotheek-catalogus"
version = "1.0.2"
description = "Own searchable catalog of the Dutch online bibliotheek (onlinebibliotheek.nl)"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tenacity>=8.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "loguru>=0.7.3",
]

[project.scripts]
obc = "obc.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
obc = ["web/templates/*.html", "web/static/*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.6",
    "ty>=0.0.56",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient still imports httpx; the httpx2 migration is upstream's
    # call, not ours. Scoped to this one message (category omitted — it's
    # StarletteDeprecationWarning, not DeprecationWarning) instead of the old blanket
    # ignore::DeprecationWarning that hid every upstream deprecation.
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.ty]
# Green baseline, not a type-annotation campaign. The only diagnostics are
# third-party stub imprecision, scoped-ignored below (not disabled globally).

[[tool.ty.overrides]]
# BeautifulSoup element accessors (.get/subscript/.string) are typed as broad
# unions (str | AttributeValueList | None); the scrapers guard every access at
# runtime, but ty can't narrow the bs4 stubs. Scope the noise to the parsers.
include = ["src/obc/detail.py", "src/obc/listing.py"]
rules = { "no-matching-overload" = "ignore", "unresolved-attribute" = "ignore", "invalid-argument-type" = "ignore" }

[[tool.ty.overrides]]
# Jinja2's Environment.globals is a plain dict; ty narrows its value type from the
# first literal entries then flags each later assignment of a differently-typed
# callable/str. Assigning template globals this way is the documented Jinja API.
include = ["src/obc/web/app.py"]
rules = { "invalid-assignment" = "ignore" }

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, B bugbear, UP pyupgrade,
# A flake8-builtins, C4 comprehensions, SIM simplify.
select = ["E", "W", "F", "I", "B", "UP", "A", "C4", "SIM"]
ignore = [
    "E501",   # line length is handled by the formatter, not enforced hard
    "SIM105", # contextlib.suppress over try/except/pass — explicit reads fine here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]              # fixtures imported after warning filters
"src/obc/web/app.py" = ["B008"]   # FastAPI Query(...) in defaults is the idiom
